feat: Logout API added
