# routes/v1.php
@@ -7,4 +7,8 @@ Route::middleware('api-log')->group(function () {
     Route::post('register', [UserController::class, 'register']);
     Route::post('login', [UserController::class, 'login']);
 
+    Route::middleware('auth:sanctum')->group(function () {
+        Route::post('logout', [UserController::class, 'logout']);
+    });
+
 });
